# AzureNexus

./: AzureNexus.qrc  CMakeLists.txt  ColorsConfig.h  SvgButton.qml  Wayland.qml  login.qml  main.cpp  main.qml  message.h  quicclient.cpp  quicclient.h  roundedimage.cpp  roundedimage.h  screencapture.cpp  screencapture.h  splashscreen.cpp  splashscreen.h  translationmanager.cpp  translationmanager.h  voicecapture.cpp  voicecapture.h  waylandscreencpature.cpp  waylandscreencpature.h
